read service account address from flow.json, add some TODO comments
